<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">InstaPlan</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="chatroom_button">Post</string>
    <string name="chatroom_hint">Write Post</string>
    <string name="chatroom_textView_title">Event</string>
    <string name="getContacts_done_button_text">Done!</string>
    <string name="createEvent_eventTitle">Title</string>
    <string name="createEvent_titleHint">Enter a title</string>
    <string name="createEvent_pageTitle">New Event</string>
    <string name="createEvent_eventTime">Time :  </string>
    <string name="createEvent_eventDate">Date :  </string>
    <string name="createEvent_eventLocation">Location</string>
    <string name="createEvent_locationHint">My house</string>
    <string name="createEvent_eventDescription">Brief Description</string>
    <string name="createEvent_descriptionHint">Get Hype!</string>
    <string name="createEvent_facebookStatus">Sync with Facebook?</string>
    <string name="createEvent_invite_local_contact_button">Invite local contacts</string>
    <string name="createEvent_invite_facebook_friend_button">Invite Facebook Friends</string>
    <string name="createEvent_invite_non_local_contact_button">Invite Others(Non local email/phone)</string>
    <string name="createEvent_done_button">Done!</string>
    <string name="runTime_Status_Check_button">Update</string>
    <string name="runTime_Status_Check_title">Status Check</string>
    <string name="allEvents_createNew_button">Create New</string>
    <string name="allEvents_deleteMultiple_button">Delete Multiple</string>
    <string name="address">Address:</string>
    <string name="enable_gps">Enable GPS</string>
    <string name="enable_gps_dialog">GPS provider not enabled. Would you like to enable it?</string>
    <string name="latlng">Lat/Long:</string>
    <string name="unknown">--Unknown--</string>
    <string name="not_support_gps">GPS provider not supported</string>
    <string name="not_support_network">Network provider not supported</string>
    <string name="use_fine_provider">Fine-grain provider</string>
    <string name="use_both_providers">Both providers</string>
    <string name="downloader_editText_hint">Enter Target URL</string>
    <string name="downloader_fast_download_button">Fast Download :) :)</string>
    <string name="downloader_slow_download_button">Slow download :( :(</string>
    <string name="location_refresh_button">Save manually?</string>
    <string name="hello">Hello World, MessageActivity!</string>
    <string name="main_empty_list">There is no recent conversation, write new message
		to start one.</string>
    <string name="createEvent_toggle_gcm_button">Register Your Device For GCM (Free internet Texting)</string>
    <string name="createEvent_username_textView">Your IM name (Optional) -GCM only</string>
    <string name="createEvent_username_editText_hint">Only GCM users can see</string>
    <string name="phoneRegistration_title_textView">GCM Registration!</string>
    <string name="phoneRegistration_gcmInfo_textView">Think of GCM (Google Cloud Messaging) as an SMS service, which instead of using radio reception and phone numbers, rather uses internet reception and GCM IDs. To use this service, the GCM server needs to link your GCM ID (autogenerated) with your Phone Number. In order to use the app, please enter your phone number here below, for verification.\nThe GCM server will never release your phone number to other user.\n\n </string>
    <string name="phoneRegistration_userEmail_hint">john.smith@example.com</string>
    <string name="phoneRegistration_userEmail_textView">Email (Optional)</string>
    <string name="phoneRegistration_userName_hint">Incredible Hulk</string>
    <string name="phoneRegistration_userName_textView">Preferred Name (Optional)</string>
    <string name="phoneRegistration_phoneNumber_textView">11-digits Phone Number</string>
    <string name="phoneRegistration_register_button">Register</string>
    <string name="phoneRegistration_unregister_button">Unregister</string>
    <string name="createEvent_embed_googleMapLocation_button">Enable \'Show on Google Map\'</string>
    <string name="phoneLock_verify_button">Verify</string>

</resources>