<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="95"
        android:padding="10sp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/createEvent_pageTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/createEvent_pageTitle"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="30sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/createEvent_eventTitle_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/createEvent_eventTitle"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/createEvent_eventTitle_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/createEvent_titleHint" >
            </EditText>

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/createEvent_eventDate_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/createEvent_eventDate"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/createEvent_eventDate_datePicker"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Set Date" />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/createEvent_eventTime_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/createEvent_eventTime"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/createEvent_eventTime_timePicker"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Set Time" />
                </TableRow>
            </TableLayout>

            <TextView
                android:id="@+id/createEvent_eventLocation_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/createEvent_eventLocation"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/createEvent_eventLocation_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/createEvent_locationHint"
                android:inputType="textMultiLine" />

            <TextView
                android:id="@+id/createEvent_eventDescription_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/createEvent_eventDescription" />

            <EditText
                android:id="@+id/createEvent_eventDescription_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/createEvent_descriptionHint"
                android:inputType="textMultiLine" />

            <CheckBox
                android:id="@+id/createEvent_facebookStatus_checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/createEvent_facebookStatus" />

            <Button
                android:id="@+id/createEvent_toggle_gcm_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/createEvent_toggle_gcm_button" />

            <Button
                android:id="@+id/createEvent_invite_local_contact_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/createEvent_invite_local_contact_button" />

            <Button
                android:id="@+id/createEvent_done_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/createEvent_done_button" />

            <!-- <Button -->
            <!-- android:id="@+id/createEvent_invite_facebook_friend_button" -->
            <!-- android:layout_width="match_parent" -->
            <!-- android:layout_height="wrap_content" -->
            <!-- android:text="@string/createEvent_invite_facebook_friend_button" /> -->


            <!-- <Button -->
            <!-- android:id="@+id/createEvent_invite_non_local_contact_button" -->
            <!-- android:layout_width="match_parent" -->
            <!-- android:layout_height="wrap_content" -->
            <!-- android:text="@string/createEvent_invite_non_local_contact_button" /> -->
        </LinearLayout>
    </ScrollView>

</LinearLayout>