<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/provider_fine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_inactive"
            android:minWidth="160sp"
            android:onClick="useFineProvider"
            android:text="@string/use_fine_provider" />

        <Button
            android:id="@+id/provider_both"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_inactive"
            android:minWidth="160sp"
            android:onClick="useCoarseFineProviders"
            android:text="@string/use_both_providers" />
    </LinearLayout>

    <TextView
        android:id="@+id/label_latlng"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/latlng"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/latlng"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/label_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp" />

    <Button
        android:id="@+id/location_refresh_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/location_refresh_button" />

</LinearLayout>